--- a/L4 - Inference/L4 - Hypothesis Testing.tex
+++ b/L4 - Inference/L4 - Hypothesis Testing.tex
@@ -1,5 +1,5 @@
 \input{../preamble.tex}
-\setbeamersize{text margin left=10pt,text margin right=10pt}
+%\setbeamersize{text margin left=10pt,text margin right=10pt}
 
 \begin{document}
 
