--- a/L1 - Probability/L1 - Probability.tex
+++ b/L1 - Probability/L1 - Probability.tex
@@ -1,4 +1,6 @@
-\input{../resources/preamble.tex}
+\documentclass[aspectratio=169,11pt]{beamer}
+\usepackage{teaching_slides}
+
 
 \begin{document}
 
@@ -9,7 +11,7 @@
 \title{Econometrics I}
 \subtitle{Lecture 1: Probability}
 
-\author{Chris Conlon \\NYU Stern}
+%\author{Chris Conlon \\NYU Stern}
 \date{Fall 2025}
 \maketitle
 
