--- a/L6 - Maximum Likelihood/etable_output.tex
+++ b/L6 - Maximum Likelihood/etable_output.tex
@@ -1,34 +1,38 @@
-
-   \begin{tabular}{lccc}
-      \toprule
-                          &  OLS           & Probit        & Logit\\  
-      \midrule
-      \emph{Variables}\\
-      Constant            & -0.174$^{***}$ & -2.96$^{***}$ & -5.56$^{***}$\\   
-                          & (0.026)        & (0.205)       & (0.406)\\   
-      Black               & 0.081$^{***}$  & 0.367$^{***}$ & 0.657$^{***}$\\   
-                          & (0.017)        & (0.097)       & (0.177)\\   
-      Debt/Income         & 0.471$^{***}$  & 2.58$^{***}$  & 5.03$^{***}$\\   
-                          & (0.087)        & (0.546)       & (1.03)\\   
-      Housing/Income      & -0.069         & -0.328        & -0.405\\   
-                          & (0.096)        & (0.652)       & (1.24)\\   
-      LTV: Medium         & 0.028$^{**}$   & 0.193$^{**}$  & 0.428$^{***}$\\   
-                          & (0.012)        & (0.081)       & (0.158)\\   
-      LTV: High           & 0.189$^{***}$  & 0.779$^{***}$ & 1.48$^{***}$\\   
-                          & (0.033)        & (0.175)       & (0.309)\\   
-      Consumer Credit     & 0.031$^{***}$  & 0.153$^{***}$ & 0.286$^{***}$\\   
-                          & (0.004)        & (0.021)       & (0.040)\\   
-      Mortgage Credit     & 0.019$^{*}$    & 0.134$^{*}$   & 0.258$^{*}$\\   
-                          & (0.011)        & (0.074)       & (0.141)\\   
-      Public Bad Credit   & 0.200$^{***}$  & 0.712$^{***}$ & 1.25$^{***}$\\   
-                          & (0.023)        & (0.118)       & (0.205)\\   
-      Denied Mortgage Ins & 0.701$^{***}$  & 2.54$^{***}$  & 4.53$^{***}$\\   
-                          & (0.041)        & (0.284)       & (0.554)\\   
-      \midrule
-      \emph{Fit statistics}\\
-      Pseudo R$^2$        & 0.51868        & 0.26407       & 0.26586\\  
-      Observations        & 2,380          & 2,380         & 2,380\\  
-      \bottomrule
-      \multicolumn{4}{l}{\emph{IID standard-errors in parentheses}}\\
-      \multicolumn{4}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
-   \end{tabular}
+\begingroup
+\centering
+\begin{tabular}{lccc}
+   \tabularnewline \midrule \midrule
+   Dependent Variable: & \multicolumn{3}{c}{deny}\\
+   Model:              & (1)            & (2)           & (3)\\  
+                       &  OLS           & Probit        & Logit\\  
+   \midrule
+   \emph{Variables}\\
+   Constant            & -0.174$^{***}$ & -2.96$^{***}$ & -5.56$^{***}$\\   
+                       & (0.026)        & (0.205)       & (0.406)\\   
+   Black               & 0.081$^{***}$  & 0.367$^{***}$ & 0.657$^{***}$\\   
+                       & (0.017)        & (0.097)       & (0.177)\\   
+   Debt/Income         & 0.471$^{***}$  & 2.58$^{***}$  & 5.03$^{***}$\\   
+                       & (0.087)        & (0.546)       & (1.03)\\   
+   Housing/Income      & -0.069         & -0.328        & -0.405\\   
+                       & (0.096)        & (0.652)       & (1.24)\\   
+   LTV: Medium         & 0.028$^{**}$   & 0.193$^{**}$  & 0.428$^{***}$\\   
+                       & (0.012)        & (0.081)       & (0.158)\\   
+   LTV: High           & 0.189$^{***}$  & 0.779$^{***}$ & 1.48$^{***}$\\   
+                       & (0.033)        & (0.175)       & (0.309)\\   
+   Consumer Credit     & 0.031$^{***}$  & 0.153$^{***}$ & 0.286$^{***}$\\   
+                       & (0.004)        & (0.021)       & (0.040)\\   
+   Mortgage Credit     & 0.019$^{*}$    & 0.134$^{*}$   & 0.258$^{*}$\\   
+                       & (0.011)        & (0.074)       & (0.141)\\   
+   Public Bad Credit   & 0.200$^{***}$  & 0.712$^{***}$ & 1.25$^{***}$\\   
+                       & (0.023)        & (0.118)       & (0.205)\\   
+   Denied Mortgage Ins & 0.701$^{***}$  & 2.54$^{***}$  & 4.53$^{***}$\\   
+                       & (0.041)        & (0.284)       & (0.554)\\   
+   \midrule
+   \emph{Fit statistics}\\
+   Pseudo R$^2$        & 0.51868        & 0.26407       & 0.26586\\  
+   Observations        & 2,380          & 2,380         & 2,380\\  
+   \midrule \midrule
+   \multicolumn{4}{l}{\emph{IID standard-errors in parentheses}}\\
+   \multicolumn{4}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
+\end{tabular}
+\par\endgroup
