--- a/L7 - Program Evaluation and Selection/selection.tex
+++ b/L7 - Program Evaluation and Selection/selection.tex
@@ -21,8 +21,7 @@
 
 \usepackage{inconsolata} % nice monospace font
 
-\title{Program Evaluation(b):
-Parametric Selection}
+\title{Selection Models}
 \author{Chris Conlon}
 \institute{Applied Econometrics}
 \date{\today}
